# babel-agents

./: Cargo.toml  Makefile  REUSE.toml
.github/workflows/: ci.yml
crates/agent-committer/: Cargo.toml
crates/agent-committer/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: capability.rs  enforce.rs  error.rs  lib.rs  sandbox.rs
crates/agent-generator/: Cargo.toml
crates/agent-generator/src/: lib.rs
crates/agent-orchestrator/: Cargo.toml
crates/agent-orchestrator/src/: lib.rs
crates/agent-planner/: Cargo.toml
crates/agent-planner/src/: lib.rs
crates/agent-test-writer/: Cargo.toml
crates/agent-test-writer/src/: lib.rs
crates/agent-validator-stage0/: Cargo.toml
crates/agent-validator-stage0/src/: lib.rs
crates/agent-validator-stage1/: Cargo.toml
crates/agent-validator-stage1/src/: lib.rs
crates/agent-validator-stage2/: Cargo.toml
crates/agent-validator-stage2/src/: lib.rs
crates/agent-validator-stage3/: Cargo.toml
crates/agent-validator-stage3/src/: lib.rs
docs/: fork-sourcing-map.md
