[workspace]
resolver = "2"
members = [
  "crates/agent-core",
  "crates/agent-planner",
  "crates/agent-generator",
  "crates/agent-test-writer",
  "crates/agent-validator-stage0",
  "crates/agent-validator-stage1",
  "crates/agent-validator-stage2",
  "crates/agent-validator-stage3",
  "crates/agent-committer",
  "crates/agent-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
repository = "https://github.com/metavacua/babel-agents"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasmtime = "43"
