[workspace]
resolver = "2"
members = [
  "crates/agent-core",
  "crates/agent-planner",
  "crates/agent-generator",
  "crates/agent-test-writer",
  "crates/agent-validator-stage0",
  "crates/agent-validator-stage1",
  "crates/agent-validator-stage2",
  "crates/agent-validator-stage3",
  "crates/agent-committer",
  "crates/agent-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# core::error::Error (needed by thiserror's no_std derive below) stabilized
# in 1.81 — bumped from 1.80 to match what this workspace actually requires.
rust-version = "1.81"
license = "AGPL-3.0-or-later"
repository = "https://github.com/metavacua/babel-agents"

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
# default-features = false drops thiserror's `std` feature, so its derive
# targets core::error::Error instead of std::error::Error — no_std-compatible
# without a hand-rolled Display/Error impl.
thiserror = { version = "2", default-features = false }
# Pure-Rust interpreter, no Cranelift/native-codegen dependency — preferred
# over wasmtime for this project (portable across targets Cranelift
# doesn't support, e.g. 32-bit ARM; see chrishayuk/larql's own wasmi
# fallback precedent).
wasmi = "0.42"
